--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,13 @@ env:
   - DJANGO_REST_VERSION=3.9.3 DJANGO_VERSION="==3.2"
   - DJANGO_REST_VERSION=3.12.4 DJANGO_VERSION=">=4.0"
 
+matrix:
+  exclude:
+    - python: "3.6"
+      env: DJANGO_REST_VERSION=3.12.4 DJANGO_VERSION=">=4.0"
+    - python: "3.7"
+      env: DJANGO_REST_VERSION=3.12.4 DJANGO_VERSION=">=4.0"
+
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
   - pip install -q djangorestframework==$DJANGO_REST_VERSION Django$DJANGO_VERSION
